--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 	<head>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
 		<script src="thesaurus_rex.js" type="text/javascript" language="javascript"></script>
+		<script type="text/javascript" language="javascript">
+		$(function(){
+	    $('textarea').val($('textarea').attr('placeholder'))
+	    $('textarea').blur(function(){
+  	    if($('textarea').val() == '')
+  	      $('textarea').val($('textarea').attr('placeholder'))
+	    })
+	    $('textarea').focus(function(){
+  	    if($('textarea').val() == $('textarea').attr('placeholder'))
+  	      $('textarea').val('')
+	    })
+		})
+		</script>
 		<style>
 			body {
 				font-size: 1.3em;
@@ -22,8 +35,7 @@
 	</head>
 	<body>
 		<div id="container">
-			<textarea id="text" placeholder="Begin writing to see how Thesaurus Rex likes your text...">
-			</textarea>
+			<textarea id="text" placeholder="Begin writing to see how Thesaurus Rex likes your text..."></textarea>
 		</div>
 	</body>
 </html>
