--- a/index.html
+++ b/index.html
@@ -16,21 +16,16 @@
       })
     </script>
     <style>
-      body {
-        font-size: 1.3em;
-      }
-      ul, li {
-        margin: 0;
-        padding: 0;
-      }
       #container {
         clear: both;
-        width: 24em;
+        width: 700px;
         margin: 2em auto;
       }
       textarea {
+        font-size: 1.2em;
         width: 100%;
-        height: 25em;
+        height: 18em;
+        font-family: "Book Antiqua", "Palatino Linotype";
       }
     </style>
   </head>
