using 2-argument syntax for growl()

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
         // setup ThesaurusRex events
         check = function(){
           $('textarea').val(
-            ThesaurusRex.growl( $('textarea').val() )
+            ThesaurusRex.growl(
+
+              $('textarea').val(),
+
+              function(highlighted){
+                $('textarea').val(highlighted)
+              }
+
+            )
           )
         }
         // run check() every half-second if the textarea has focus
