--- a/index.html
+++ b/index.html
@@ -1,43 +1,42 @@
 <html>
   <head>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
+    <script src="jquery.designmode.js" type="text/javascript" language="javascript"></script>
     <script src="thesaurus_rex.js" type="text/javascript" language="javascript"></script>
     <script type="text/javascript" language="javascript">
       $(function(){
 
+        var frame = $('#editor')
+        frame.designMode('on')
+        var editor = $($('#editor').contentDocument()).find('body')
+
         // setup ThesaurusRex events
         check = function(){
+          console.log('check...')
           ThesaurusRex.growl(
 
-            $('textarea').val(),
+            editor.html(),
 
             function(highlighted){
-              $('textarea').val(highlighted)
+              editor.html(highlighted)
             }
 
           )
         }
         // run check() every half-second if the textarea has focus
         setInterval(function(){
-          $('textarea').attr('focused') && check()
-        }, 500)
+          check()
+        }, 1000)
 
         // setup the placeholder value for the textarea
-
-        var t = $('textarea')
-
-        t.attr('designmode', true)
-
-        t.val(t.attr('placeholder'))
-        t.blur(function(){
-          t.attr('focused', false)
-          if(t.val() == '')
-            t.val(t.attr('placeholder'))
+        editor.val(frame.attr('placeholder'))
+        editor.blur(function(){
+          if(editor.html() == '')
+            editor.html(frame.attr('placeholder'))
         })
-        t.focus(function(){
-          t.attr('focused', true)
-          if(t.val() == t.attr('placeholder'))
-            t.val('')
+        editor.focus(function(){
+          if(editor.html() == frame.attr('placeholder'))
+            editor.html('')
         })
       })
     </script>
@@ -79,7 +78,7 @@
       a img {
         border: none;
       }
-      textarea {
+      iframe#editor {
         font-size: 1.2em;
         width: 100%;
         height: 18em;
@@ -100,7 +99,7 @@
           <img src="fork.png" alt="Fork This!"/>
         </a>
       </div>
-      <textarea id="text" placeholder="Begin writing to see how Thesaurus Rex likes your text..."></textarea>
+      <iframe id="editor" placeholder="Begin writing to see how Thesaurus Rex likes your text..."></iframe>
     </div>
   </body>
 </html>
