--- a/index.html
+++ b/index.html
@@ -6,27 +6,28 @@
     <script type="text/javascript" language="javascript">
       $(function(){
 
-        var frame = $('#editor')
+        frame = $('#editor')
         frame.designMode('on')
-        var editor = $($('#editor').contentDocument()).find('body')
+        editor = $($('#editor').contentDocument()).find('body')
 
         // setup ThesaurusRex events
         check = function(){
-          console.log('check...')
           ThesaurusRex.growl(
 
-            editor.html(),
+            editor.text(),
 
-            function(highlighted){
-              editor.html(highlighted)
+            function(word, highlightedWord){
+              editor.html(
+                editor.html().replace(new RegExp(word, 'g'), highlightedWord)
+              )
             }
 
           )
         }
         // run check() every half-second if the textarea has focus
-        setInterval(function(){
-          check()
-        }, 3000)
+        // setInterval(function(){
+        //   check()
+        // }, 3000)
 
         // setup the placeholder value for the textarea
         editor.val(frame.attr('placeholder'))
