--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
         // setup ThesaurusRex events
         check = function(){
+          editor.html(editor.text())
           ThesaurusRex.growl(
             editor.text(),
             ThesaurusRex.replaceHtml(editor)
@@ -20,19 +21,19 @@
         }
         // run check() every second if the editor has focus
         setInterval(function(){
-          editor.attr('focused') && check()
+          frame.attr('focused') && check()
         }, 1000)
 
         // setup the placeholder value for the textarea
         frame.load(function(){
           editor.html(frame.attr('placeholder'))
           parent.focus(function(){
-            editor.attr('focused', false)
+            frame.attr('focused', null)
             if(editor.text() == '')
               editor.html(frame.attr('placeholder'))
           })
           parent.blur(function(){
-            editor.attr('focused', true)
+            frame.attr('focused', true)
             if(editor.html() == frame.attr('placeholder'))
               editor.text('')
           })
