final cleanup of object scoping

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               .each(function(){
                 $(this).replaceWith($(this).text())
               })
-          ThesaurusRex.growl(
+          ThesaurusRex.scan(
             editor.html(),
             ThesaurusRex.replaceHtml(editor)
           )
