--- a/index.html
+++ b/index.html
@@ -132,4 +132,13 @@
       <p>I started around Halloween, and a woman called and said there were "gangs of kids walking down the street."
   </div>
 </body>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-331450-11");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 </html>
